# sternum

./: Cargo.toml
src/: lib.rs  tests.rs
src/tests/compile/: just-derive.rs
sternum/: Cargo.toml
sternum/src/: lib.rs
sternum/test/: test.rs  test_impl.rs  test_impl_scoped.rs  test_impl_transform.rs
sternum/test/compile/: case-insensitive-variants.rs  case-insensitive-variants.stderr  invalid-attributes.stderr  require-enum.stderr  require-unit-enum.stderr
sternum_derive/: Cargo.toml
sternum_derive/src/: error.rs  features.rs  lib.rs
sternum_derive/src/features/: parse.rs
test/: test.rs  test_impl.rs  test_impl_scoped.rs
test/compile/: invalid-attributes.rs  require-enum.rs
tests/: test_impl.rs  test_impl_display.rs  tests.rs
tests/compile/: invalid-attributes.stderr  redefine-std-fmt-display.rs  redefine-std.rs  require-enum-variants.rs  require-enum-variants.stderr  require-unit-enum.rs
