[package]
name = "sternum"
version = "0.1.0"
authors = ["Barret Rennie <barret@brennie.ca>"]
edition = "2018"

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/tests.rs"

[dependencies]
proc-macro2 = "0.4.30"
quote = "0.6"
syn = { version = "0.15", features = ["extra-traits"] }

[dev-dependencies]
trybuild = "1.0"
