[package]
name = "sternum"
version = "0.1.0"
authors = ["Barret Rennie <barret@brennie.ca>"]
edition = "2018"
license = "MIT/Apache-2.0"
autotests = false

[lib]
proc-macro = true

[[test]]
name = "test"
path = "test/test.rs"

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["extra-traits"] }

[dev-dependencies]
trybuild = "1.0"
