[package]
name = "sternum_derive"
version = "0.1.0"
authors = ["Barret Rennie <barret@brennie.ca>"]
edition = "2018"
license = "MIT/Apache-2.0"
autotests = false

[lib]
proc-macro = true

[dependencies]
either = "1.5"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["extra-traits"] }
